# foodly-backend

./: .env.example  .gitignore  .prekignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  prek.toml  scratch_test.rs
.github/: dependabot.yml
.sqlx/: query-052de4f6c22850e9291988b600dc3eda48dfbf40c15cf3659ffe40304e9d444b.json  query-06f36e5f0340a19f6c31196f59acfd6c90a41c770e74b5e47106cd2f29fbdb4b.json  query-0fb343ba23b05864801c1aa1e192836c73e935bf486f6c51591c1e6446d1e1c3.json  query-12e81f77b781257c873bd7f9997dae908527b15f7db6c1b1a5c58bd8abd28052.json  query-17d28f3d34a2a214b479a3192b0fcf3074340b79efa3d651d734952ffa670830.json  query-1ac6fbb70fe6d809bb13d218d5b0d1329101a3c370e13c769a9c485161d7a845.json  query-1b1e60df4f5cf8c7aaf564ab2b2e853dcd48c83dfa08464a2243d89973b82cb0.json  query-1b9b470de668195a1dbae18e4b2d057ae7f3314d4c15a54ea360c9ee8aa99067.json  query-2904367259a0448e39e7c68f42af5147d9954be0b625456e01d457f7d2a9ea6d.json  query-2cd7c1aec60c2d2c3429e68d25d47eeff2d290b638932d35a46fdaf52cad9841.json  query-38b3f2b7f65df59b93baf3b292bc0b0bc8946c6f95baafa2b7730e47fa334d5e.json  query-3e1fb42af7f7c55bbb017528b5bfc1cc306d17465831d6caabae732e74d62660.json  query-42ac444719999bfa18be77a2139514f6911d7092de8bc6c64abd352078e5e4ba.json  query-47a9cd39ff584529900164346bd2ee4380cf9f94eaf26b5507ba8232a951e2e1.json  query-4d3f43295864769181da259015f7c6cc218cf43172ad4a150617eaf20f166b4f.json  query-53753cb9311dfdee0ed30f3c750b9c0d8429f34c53b86c023d253f75dd6fe225.json  (+28 more)
resources/: database-types.ts
src/: error.rs  lib.rs  (+2 more)
(+49 files in other folders)
